--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
 <script src="libs/bootstrap-4.6.0/bootstrap.bundle.min.js"></script><script src="libs/bs3compat-0.2.4.9002/tabs.js"></script><script src="libs/bs3compat-0.2.4.9002/bs3compat.js"></script><link href="libs/bs4_book-1.0.0/bs4_book.css" rel="stylesheet">
-<script src="libs/bs4_book-1.0.0/bs4_book.js"></script><script src="libs/accessible-code-block-0.0.1/empty-anchor.js"></script><script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.jquery.min.js"></script><script src="https://cdn.jsdelivr.net/npm/mark.js@8.11.1/dist/mark.min.js"></script><!-- CSS -->
+<script src="libs/bs4_book-1.0.0/bs4_book.js"></script><script src="libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 </head>
-<body data-spy="scroll" data-target="#toc">
-
-<div class="container-fluid">
+<body>
+<span class="math inline">
+  \(\DeclareMathOperator{\expit}{expit}\)
+  \(\DeclareMathOperator{\logit}{logit}\)
+  \(\DeclareMathOperator*{\argmin}{\arg\!\min}\)
+  \(\newcommand{\indep}{\perp\!\!\!\perp}\)
+  \(\newcommand{\coloneqq}{\mathrel{=}}\)
+  \(\newcommand{\R}{\mathbb{R}}\)
+  \(\newcommand{\E}{\mathbb{E}}\)
+  \(\newcommand{\M}{\mathcal{M}}\)
+  \(\renewcommand{\P}{\mathbb{P}}\)
+  \(\newcommand{\I}{\mathbb{I}}\)
+  \(\newcommand{\1}{\mathbbm{1}}\)
+  </span>
+    <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.jquery.min.js"></script><script src="https://cdn.jsdelivr.net/npm/mark.js@8.11.1/dist/mark.min.js"></script><!-- CSS --><div class="container-fluid">
 <div class="row">
   <header class="col-sm-12 col-lg-3 sidebar sidebar-book"><a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
@@ -33,10 +45,10 @@
         <ul class="book-toc list-unstyled">
 <li><a class="active" href="index.html">Welcome to SER!</a></li>
 <li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal Mediation Analysis</a></li>
-<li><a class="" href="intro.html"><span class="header-section-number">2</span> The Roadmap for Statistical Learning</a></li>
-<li><a class="" href="natural.html"><span class="header-section-number">3</span> The Natural Direct and Indirect Effects</a></li>
+<li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
+<li><a class="" href="estimandirl.html"><span class="header-section-number">3</span> How to choose an estimand: Real world example</a></li>
 <li><a class="" href="interventional.html"><span class="header-section-number">4</span> The Interventional Direct and Indirect Effects</a></li>
-<li><a class="" href="stochastic.html"><span class="header-section-number">5</span> The Stochastic Direct and Indirect Effects</a></li>
+<li><a class="" href="estimation-of-natural-indirect-effects-interventional-indirect-effects.html"><span class="header-section-number">5</span> Estimation of natural (in)direct effects, interventional (in)direct effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -152,7 +164,7 @@ target available policy and program resources.</p>
 <p>These workshop materials were written using <a href="http://bookdown.org/">bookdown</a>,
 and the complete source is available on
 <a href="https://github.com/tlverse/tlverse-handbook">GitHub</a>. This version of the book
-was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pandoc</a> version <code>r rmarkdown::pandoc_version()</code>, and the following packages:</p>
+was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pandoc</a> version <code>r rmarkdown::pandoc_version()</code>, and the following packages:</p>
 <div class="inline-table"><table class="table table-sm">
 <thead><tr class="header">
 <th align="left">package</th>
@@ -173,47 +185,47 @@ was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pando
 <tr class="odd">
 <td align="left">dagitty</td>
 <td align="left">0.3-1</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">data.table</td>
 <td align="left">1.14.0</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">downlit</td>
 <td align="left">0.2.1</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">dplyr</td>
 <td align="left">1.0.5</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">ggdag</td>
 <td align="left">0.2.3</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">ggfortify</td>
 <td align="left">0.4.11</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">ggplot2</td>
 <td align="left">3.3.3</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">kableExtra</td>
 <td align="left">1.3.4</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">knitr</td>
 <td align="left">1.31</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">medoutcon</td>
@@ -228,17 +240,17 @@ was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pando
 <tr class="even">
 <td align="left">mvtnorm</td>
 <td align="left">1.1-1</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">origami</td>
 <td align="left">1.0.3</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">readr</td>
 <td align="left">1.4.0</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">rmarkdown</td>
@@ -248,7 +260,7 @@ was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pando
 <tr class="even">
 <td align="left">skimr</td>
 <td align="left">2.1.3</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">sl3</td>
@@ -258,17 +270,17 @@ was built with R version 4.0.4 (2021-02-15), <a href="https://pandoc.org/">pando
 <tr class="even">
 <td align="left">stringr</td>
 <td align="left">1.4.0</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="odd">
 <td align="left">tibble</td>
 <td align="left">3.1.0</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 <tr class="even">
 <td align="left">tidyr</td>
 <td align="left">1.1.3</td>
-<td align="left">CRAN (R 4.0.4)</td>
+<td align="left">CRAN (R 4.0.5)</td>
 </tr>
 </tbody>
 </table></div>
@@ -432,7 +444,7 @@ Data</a>.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: March 29, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 19, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
