--- a/preliminaries-on-semiparametric-estimation.html
+++ b/preliminaries-on-semiparametric-estimation.html
@@ -1034,8 +1034,7 @@ g-computation estimator in a simple situation</li>
 <span class="va">trueval</span> <span class="op">&lt;-</span> <span class="fu"><a href="https://rdrr.io/r/base/mean.html">mean</a></span><span class="op">(</span><span class="op">(</span><span class="fu">mean_y</span><span class="op">(</span><span class="fl">1</span>, <span class="fl">1</span>, <span class="va">w_big</span><span class="op">)</span> <span class="op">-</span> <span class="fu">mean_y</span><span class="op">(</span><span class="fl">1</span>, <span class="fl">0</span>, <span class="va">w_big</span><span class="op">)</span><span class="op">)</span> <span class="op">*</span>
   <span class="fu">mean_m</span><span class="op">(</span><span class="fl">0</span>, <span class="va">w_big</span><span class="op">)</span> <span class="op">+</span> <span class="op">(</span><span class="fu">mean_y</span><span class="op">(</span><span class="fl">0</span>, <span class="fl">1</span>, <span class="va">w_big</span><span class="op">)</span> <span class="op">-</span> <span class="fu">mean_y</span><span class="op">(</span><span class="fl">0</span>, <span class="fl">0</span>, <span class="va">w_big</span><span class="op">)</span><span class="op">)</span> <span class="op">*</span>
     <span class="op">(</span><span class="fl">1</span> <span class="op">-</span> <span class="fu">mean_m</span><span class="op">(</span><span class="fl">0</span>, <span class="va">w_big</span><span class="op">)</span><span class="op">)</span><span class="op">)</span>
-<span class="fu"><a href="https://rdrr.io/r/base/print.html">print</a></span><span class="op">(</span><span class="va">trueval</span><span class="op">)</span>
-<span class="co">#&gt; [1] 0.58048</span></code></pre></div>
+<span class="fu"><a href="https://rdrr.io/r/base/print.html">print</a></span><span class="op">(</span><span class="va">trueval</span><span class="op">)</span></code></pre></div>
 <ul>
 <li>Let’s perform a simulation where we draw 1000 datasets from the above
 distribution, and compute a g-computation estimator based on</li>
@@ -1065,7 +1064,6 @@ distribution, and compute a g-computation estimator based on</li>
 
 <span class="fu"><a href="https://rdrr.io/r/graphics/hist.html">hist</a></span><span class="op">(</span><span class="va">estimate</span><span class="op">)</span>
 <span class="fu"><a href="https://rdrr.io/r/graphics/abline.html">abline</a></span><span class="op">(</span>v <span class="op">=</span> <span class="va">trueval</span>, col <span class="op">=</span> <span class="st">"red"</span>, lwd <span class="op">=</span> <span class="fl">4</span><span class="op">)</span></code></pre></div>
-<div class="inline-figure"><img src="05-preliminaries-estimation_files/figure-html/unnamed-chunk-4-1.png" width="80%" style="display: block; margin: auto;"></div>
 <ul>
 <li>The bias also affects the confidence intervals:</li>
 </ul>
@@ -1092,7 +1090,6 @@ distribution, and compute a g-computation estimator based on</li>
   <span class="st">"Coverage probability = "</span>,
   <span class="fu"><a href="https://rdrr.io/r/base/mean.html">mean</a></span><span class="op">(</span><span class="va">lower</span> <span class="op">&lt;</span> <span class="va">trueval</span> <span class="op">&amp;</span> <span class="va">trueval</span> <span class="op">&lt;</span> <span class="va">upper</span><span class="op">)</span>, <span class="st">"%"</span>
 <span class="op">)</span>, cex <span class="op">=</span> <span class="fl">1.2</span><span class="op">)</span></code></pre></div>
-<div class="inline-figure"><img src="05-preliminaries-estimation_files/figure-html/unnamed-chunk-5-1.png" width="80%" style="display: block; margin: auto;"></div>
 </div>
 <div id="pros-and-cons-of-g-computation-with-data-adaptive-regression" class="section level3">
 <h3>
